# ros_gazebo_car

./: README.md
ackermann_keyboard_controll/: CMakeLists.txt  package.xml
ackermann_keyboard_controll/launch/: ackermann_keyboard_controller.launch
ackermann_keyboard_controll/script/: py.py
ackermann_vehicle_description/: package.xml
ackermann_vehicle_description/launch/: ackermann_vehicle.launch
ackermann_vehicle_description/materials/scripts/: car.material
ackermann_vehicle_description/meshes/: car.dae  wheel.dae
ackermann_vehicle_description/urdf/: car.xacro  cheap.xml  exp.xml  map.xacro  med.xml
ackermann_vehicle_gazebo/: CMakeLists.txt
ackermann_vehicle_gazebo/config/: base_local_planner_params.yaml  car_ctrl_params.yaml  car_joint_ctrl.yaml  costmap_common_params.yaml  gain.yaml  global_costmap_params.yaml  local_costmap_params.yaml  rviz_config.rviz
ackermann_vehicle_gazebo/launch/: ackermann_vehicle.launch  gmapping_slam.launch  hector_slam.launch
ackermann_vehicle_gazebo/models/test_map/: model.config  model.sdf
ackermann_vehicle_gazebo/models/test_map/meshes/: map.dae
ackermann_vehicle_gazebo/scripts/: RRT_optimization_global_planner.cpp  RRT_optimization_global_planner.hpp  RRT_planner.xml  ackermann_kinematic_model.hpp  car_controller.py  commandEncoder.py  global_planner.cpp  global_planner.h  global_planner_plugin.xml  kd-tree.hpp  movment_model.hpp  odomEncoder.py  odomEncoderForCartographer.py  odomToTF.py  rear_wheels_tf.py  robot_state.hpp  utils.hpp  veltoackermann.py
ackermann_vehicle_gazebo/worlds/: bot.world
